# Chordy

./: .gitignore  CMakeLists.txt  README.md  abuild.sh  aopen.sh  arun.sh  brun.sh  build.sh  chordGrid.cpp  chordGrid.h  chordy.cpp  chordy.h  chordy.mov  chordy.qrc  clean.sh  main.cpp  run.sh
.github/workflows/: linux.yml  windows.yml
android/: AndroidManifest.xml
android/res/drawable/: ic_launcher_foreground.xml
android/res/values/: colors.xml
